# operating-systems-ii-labs

./: .clang-format  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  docker-compose.yml  hub.py  wh.py
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
api_gateway/: .dockerignore  Dockerfile  go.mod  go.sum
api_gateway/cmd/server/: main.go
api_gateway/internal/auth/: handler.go
api_gateway/internal/chat/: domain.go  handler.go  ports.go  websocket.go  websocket_test.go
api_gateway/internal/config/: config.go  config_test.go
api_gateway/internal/core_bridge/: client.go  client_test.go  listener.go  listener_test.go  models.go  pool.go  pool_test.go  ports.go
api_gateway/internal/dispatcher/: worker.go
api_gateway/internal/platform/config/: config.go
api_gateway/internal/platform/server/: server.go
api_gateway/internal/predictor/: breaker.go  domain.go  handler.go  ports.go  proxy.go
api_gateway/internal/shipments/: domain.go  handler.go  handlers.go  ports.go
api_gateway/pkg/middleware/: jwt.go  metrics.go  metrics_test.go  rate_limiter.go  tracing.go  tracing_test.go
api_gateway/pkg/rabbitmq/: connection.go
config/: clients_credentials.json  config_launch.json  server_config.json  server_credentials.json  server_parameters.json
config/grafana/provisioning/dashboards/: dashboads.yaml  dhl_dashboard.json
config/grafana/provisioning/datasources/: postgres.yml
config/server/: api_gateway.conf
config/traefik/: dynamic.yml  traefik.yml
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/boards/: esp32_devkitc_procpu.conf  native_sim_native_64.conf
firmware/src/: gps_telemetry.c  gps_telemetry.h  main.c  provisioning.c  provisioning.h  route_manager.c  route_manager.h
firmware/src/ui/: ui_bridge.h  ui_qt.cpp  ui_stub.c
grafana/dashboards/: dhl_overview.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
include/client/: behavior.h  behavior_cli.h  client.h  config.h  connection.h  dhl_client.h  facade.h  inventory.h  ipc.h  logic.h  message_handler.h  shared_state.h  timers.h
include/client/emergency/: emergency_detector.h
include/common/: json_manager.h  logger.h
include/server/: admin_cli_interface.h  api_gateway_interface.h  api_parser.hpp  api_rest.hpp  auth_module.hpp  circuit_solver.hpp  client_sender.hpp  config.hpp  connection_pool.hpp  database.hpp  dhl_server.hpp  event_loop.hpp  flow_solver.hpp  graph_builder.hpp  inventory_manager.hpp  ipc.hpp  map_parser.hpp  mem_store.hpp  message_handler.hpp  mqtt_client.hpp  posix_address.hpp  result_store.hpp  server.hpp  session_manager.hpp  timer_manager.hpp  utilities.hpp  worker.hpp
ml_service/: Dockerfile  main.py
scripts/: admin_cli.py  analyze_client_logs.py  analyze_logs.py  build.sh  build_firmware.sh  build_test.sh  client_msg_tester.py  compare_benchmarks.py  coverage.sh  format.sh  gen_credentials.py  generate.py  interactive_client.py  load_test_gateway.py  rest_api_client.py  run.sh  run_clients.sh  run_n_clients.sh  run_n_clients_docker.sh  run_test.sh  tools.py  valgrid.sh
scripts/modules/: __init__.py  admin_cli.py  api_gateway_client.py  api_gateway_tester.py  benchmark.py  gen_certs.py  gen_credentials.py  profiling_graph.py  rest_api_client.py  stress_test.py
src/client/: behavior.c  behavior_cli.c  client.c  config.c  connection.c  dhl_client.c  facade.c  inventory.c  ipc.c  logic.c  main.c  message_handler.c  shared_state.c  timers.c
src/client/emergency/: emergency_detector.c
src/common/: json_manager.c  logger.c
src/server/: api_parser.cpp  api_rest.cpp  auth_module.cpp  circuit_solver.cpp  client_sender.cpp  config.cpp  connection_pool.cpp  database.cpp  dhl_server.cpp  event_loop.cpp  flow_solver.cpp  graph_builder.cpp  inventory_manager.cpp  ipc.cpp  main.cpp  map_parser.cpp  mem_store.cpp  message_handler.cpp  mqtt_client.cpp  posix_address.cpp  result_store.cpp  server.cpp  session_manager.cpp  timer_manager.cpp  utilities.cpp  worker.cpp
src/server/admin_cli/: admin_cli.c
src/server/api_gateway/: api_gateway.c
tests/: CMakeLists.txt
tests/unit/client/: mock_server.c  mock_server.h  test_behavior.c  test_behavior_cli.c  test_client.c  test_client_static.c  test_config.c  test_connection.c  test_dhl_client.c  test_facade.c  test_inventory.c  test_ipc.c  test_logic.c  test_logic_static.c  test_message_handler.c  test_server.c  test_server.h  test_shared_state.c  test_timers.c
tests/unit/common/: test_common.c  test_json_manager.c  test_logger.c
tests/unit/emergency/: test_emergency_detector.c
tests/unit/server/: test_api_parser.cpp  test_api_rest.cpp  test_auth_module.cpp  test_circuit_solver.cpp  test_config.cpp  test_connection_pool.cpp  test_database.cpp  test_event_loop.cpp  test_flow_solver.cpp  test_graph_builder.cpp  test_inventory_manager.cpp  test_ipc.cpp  test_map_parser.cpp  test_mem_store.cpp  test_message_handler.cpp  test_posix_address.cpp  test_server.cpp  test_session_manager.cpp  test_timer_manager.cpp  test_utilities.cpp  test_worker.cpp
